--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -31,8 +31,8 @@
               llevar a cabo estas tareas de manera efectiva.</p>
             <button class="btn-acceder" mat-button (click)="login()">Acceder</button>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <img class="img-cesge" src="../../../assets/img/CESGE.jpg">
+        <div class="col-xs-15 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+          <img class="img-cesge" src="../../../assets/img/CESGE.jpeg" >
         </div>
     </div>
     <br><br><br><br>
