--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -15,8 +15,8 @@
       <span class="color-span">Saberes</span>
     </button>
 
-    <!--<button class="menu1" mat-button (click)="Competencia()">
-      <span class="color-span">Competencia</span>
+    <button class="menu1" mat-button (click)="Competencia()">
+      <span class="color-span">Materia</span>
     </button>
 
     <button class="menu1" mat-button (click)="Programa()">
@@ -27,7 +27,7 @@
       <span class="color-span">Programación</span>
     </button>
 
-    <button class="menu2" mat-button  (click)="Info()">
+    <!--<button class="menu2" mat-button  (click)="Info()">
       <span class="color-span">Prog-instructor</span>
     </button> -->
 
