--- a/src/app/views/competencia/edit-competencia/edit-competencia.component.html
+++ b/src/app/views/competencia/edit-competencia/edit-competencia.component.html
@@ -8,7 +8,7 @@
 <app-navigation />
 <div class="container">
   <br>
-  <h2>Editar competencia</h2>
+  <h2>Editar materia</h2>
 
   <br>
   <div class="container">
