--- a/src/app/views/competencia/new-competencia/new-competencia.component.html
+++ b/src/app/views/competencia/new-competencia/new-competencia.component.html
@@ -7,7 +7,7 @@
 <app-navigation />
 <div class="container">
   <br>
-  <h2>Crear competencia</h2>
+  <h2>Crear materia</h2>
   <br>
   <div class="container">
     <form [formGroup]="newForm" (ngSubmit)="postForm(newForm.value)">
