--- a/src/app/views/competencia/view-competencia/view-competencia.component.html
+++ b/src/app/views/competencia/view-competencia/view-competencia.component.html
@@ -7,7 +7,7 @@
 <app-navigation/>
 <div class="container">
   <br>
-  <h2>Ver competencia</h2>
+  <h2>Ver materia</h2>
   <br>
   <div class="container">
     <form [formGroup]="viewForm">
