--- a/src/app/views/programa/list-programa/list-programa.component.html
+++ b/src/app/views/programa/list-programa/list-programa.component.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col">
         <div class="d-flex justify-content-between">
-          <div class="button-container">
+          <!--<div class="button-container">
             <button mat-menu-item class="icon-text pdf-button" matTooltip="Descargar Pdf" (click)="generatePDF()">
               <mat-icon [ngStyle]="{'color': '#FF0000'}">picture_as_pdf</mat-icon>
               <span class="icon-text">PDF</span>
@@ -28,7 +28,7 @@
               <mat-icon [ngStyle]="{'color': '#37D12B'}">description</mat-icon>
               <span class="icon-text">EXCEL</span>
             </button>
-          </div>
+          </div> -->
           <mat-form-field appearance="outline">
             <mat-label>Buscar</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="Ej: Análisis" #input>
