--- a/src/app/views/programacion/list-programacion/list-programacion.component.scss
+++ b/src/app/views/programacion/list-programacion/list-programacion.component.scss
@@ -1,7 +1,7 @@
 .btn-nuevo {
-    margin-top: 20px;
-    background-color: #39A900;
-  }
+  margin-top: 20px;
+  background-color: #465fb1;
+}
   
   h1 {
     font-weight: bold;
