las vueltas de info

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -27,9 +27,9 @@
       <span class="color-span">Programación</span>
     </button>
 
-    <!--<button class="menu2" mat-button  (click)="Info()">
-      <span class="color-span">Prog-instructor</span>
-    </button> -->
+    <button class="menu2" mat-button  (click)="Info()">
+      <span class="color-span">Prog-tutores</span>
+    </button>
 
   
     <button mat-icon-button aria-label="Usuario" [matMenuTriggerFor]="userMenu">
