--- a/src/app/views/competencia/list-competencia/list-competencia.component.html
+++ b/src/app/views/competencia/list-competencia/list-competencia.component.html
@@ -19,7 +19,7 @@
 
       <div class="col">
         <div class="d-flex justify-content-between">
-          <!-- <div class="button-container">
+          <div class="button-container">
             <button mat-menu-item class="icon-text pdf-button" matTooltip="Descargar Pdf" (click)="generatePDF()">
               <mat-icon [ngStyle]="{'color': '#FF0000'}">picture_as_pdf</mat-icon>
               <span class="icon-text">PDF</span>
@@ -29,7 +29,7 @@
               <mat-icon [ngStyle]="{'color': '#37D12B'}">description</mat-icon>
               <span class="icon-text">EXCEL</span>
             </button>
-          </div> -->
+          </div>
       
           <mat-form-field appearance="outline">
             <mat-label>Buscar</mat-label>
