--- a/src/app/views/info/info.component.html
+++ b/src/app/views/info/info.component.html
@@ -9,7 +9,7 @@
 
 <div class="container">
   <br>
-  <h1>Programación de los instructores</h1>
+  <h1>Programación de los tutores</h1>
   <br>
   <div class="container">
     <input type="text" class="form-control" (keyup)="filterInstructor($event)" placeholder="Filtrar instructor" #input
